--- a/layout-master/demos/accordion.html
+++ b/layout-master/demos/accordion.html
@@ -52,7 +52,7 @@
 			// RESIZE Accordion widget when panes resize
 		,	west__onresize:		$.layout.callbacks.resizePaneAccordions
 		});
-
+		// 기트 테스트!!!!
 		// ACCORDION - in the West pane
 		$("#accordion1").accordion({
 			heightStyle:	"fill"
