--- a/ui_test/html/draggable.html
+++ b/ui_test/html/draggable.html
@@ -5,17 +5,45 @@
 <title>Insert title here</title>
 <!-- jquery call -->
 <script src="../js/jquery.js"></script>
-
+<script src="../js/jquery-ui.js"></script>
 <script type="text/javascript">
-
-	$(document).ready(function(){});
 	
-	$( "#draggable" ).draggable();
+	/**	참고
+	 *	APIGuide -> http://api.jqueryui.com/draggable/
+	 *	-> 리터럴 객체에 속성이나 메서드를 던져준다.
+	 *
+	*/	
+	$(document).ready(function(){
+		
+		$("#joContents").draggable({
+			opacity : 0.35
+		}).find("#joCts").css({
+			"width" : "450px"
+		}).end().css({
+			"width" : $("#joCts").attr("width")
+		});
+	});
+	
+	
 </script>
 </head>
 <body>
-<div id="draggable" class="ui-widget-content">
-	<p>Drag me around</p>
+<div id="joContents"  style="width:450px">
+	<div id="joTitle">
+		타이틀
+	</div>
+	<div id="joCts">
+		제2조(정의) 이 법에서 사용하는 용어의 뜻은 다음과 같다.  <개정 2015.1.28>
+		1. "응급환자"란 질병, 분만, 각종 사고 및 재해로 인한 부상이나 그 밖의 위급한 상태로 인하여 즉시 필요한 응급처치를 받지 아니하면 생명을 보존할 수 없거나 심신에 중대한 위해(危害)가 발생할 가능성이 있는 환자 또는 이에 준하는 사람으로서 보건복지부령으로 정하는 사람을 말한다.
+		2. "응급의료"란 응급환자가 발생한 때부터 생명의 위험에서 회복되거나 심신상의 중대한 위해가 제거되기까지의 과정에서 응급환자를 위하여 하는 상담ㆍ구조(救助)ㆍ이송ㆍ응급처치 및 진료 등의 조치를 말한다.
+		3. "응급처치"란 응급의료행위의 하나로서 응급환자의 기도를 확보하고 심장박동의 회복, 그 밖에 생명의 위험이나 증상의 현저한 악화를 방지하기 위하여 긴급히 필요로 하는 처치를 말한다.
+		4. "응급의료종사자"란 관계 법령에서 정하는 바에 따라 취득한 면허 또는 자격의 범위에서 응급환자에 대한 응급의료를 제공하는 의료인과 응급구조사를 말한다.
+		5. "응급의료기관"이란 「의료법」 제3조에 따른 의료기관 중에서 이 법에 따라 지정된 중앙응급의료센터, 권역응급의료센터, 전문응급의료센터, 지역응급의료센터 및 지역응급의료기관을 말한다.
+		6. "구급차등"이란 응급환자의 이송 등 응급의료의 목적에 이용되는 자동차, 선박 및 항공기 등의 이송수단을 말한다.
+		7. "응급의료기관등"이란 응급의료기관, 구급차등의 운용자 및 응급의료지원센터를 말한다.
+		8. "응급환자이송업"이란 구급차등을 이용하여 응급환자 등을 이송하는 업(業)을 말한다.
+  		[전문개정 2011.8.4]	
+	</div>
 </div>
 </body>
 </html>
