--- a/ui_test/html/layout.html
+++ b/ui_test/html/layout.html
@@ -9,21 +9,14 @@
 
 	/* custom toggler-button styles */
 	.ui-layout-toggler-west, 
-	.ui-layout-toggler-south {
-		border:		0;
-	}
 	.ui-layout-toggler-west div {
 		width:	8px;
-		height:	35px; /* 3x 35 = 105 total height */
+		height:	50px; /* 2x 50 = 100 total height */
 	}
-	.ui-layout-toggler-south div {
-		width:	35px; /* 3x 35 = 105 total width */
-		height:	8px;
-		float:	left; /* keep on 1-line */
-	}
+	.ui-layout-toggler-north { background: #EBFF00; }
+	.ui-layout-toggler-east { background: #FF0000; }
 	.btnToggler	{ background: #00C; }
 	.btnExpand	{ background: #090; }
-	.btnReset	{ background: #C00; }
 
 	</style>
 
@@ -34,86 +27,101 @@
 	<script type="text/javascript">
 
 	// TOGGLER CUSTOMIZATION SETTINGS
-	var
+	var 
 		westDefaultSize		= 320
-	,	southDefaultSize	= "auto"
 	,	toggleButtons		= '<div class="btnToggler"></div>'
-							//+ '<div class="btnReset"></div>'
 							+ '<div class="btnExpand"></div>'
-	,	myLayout
+	,	myLayout			= null
 	;
 
 	$(document).ready(function(){
-
-		// CREATE THE LAYOUT
+		
+		// 레이아웃 세팅 ( http://layout.jquery-dev.com/documentation.cfm 참조 )
 		myLayout = $('body').layout({
-			resizeWhileDragging: 			true
-		,	fxName:							"none"
-		,	west__size:						westDefaultSize
-		,	south__size:					southDefaultSize
-		,	spacing_open:					8
-		,	spacing_closed:					8
-		,	north__spacing_open:			0
-		,	west__togglerLength_closed:		105
-		,	west__togglerLength_open:		105
-		,	south__togglerLength_closed:	105
-		,	south__togglerLength_open:		105
-		,	west__togglerContent_closed:	toggleButtons
-		,	west__togglerContent_open:		toggleButtons
-		,	south__togglerContent_closed:	toggleButtons
-		,	south__togglerContent_open:		toggleButtons
+		//  좌측판 세팅
+			west__paneSelector:				"#west"			// div 아이디 or 클래스
+		,	west__size:						westDefaultSize	// 기본 사이즈
+		,	west__minSize:					westDefaultSize // 최소 사이즈
+		,	west__maxSize:					500				// 최대 사이즈
+		,	west__togglerLength_open:		100				// 토글 버튼 사이즈 (열림)
+		,	west__togglerLength_closed:		100				// 토글 버튼 사이즈 (닫힘)
+		,	west__togglerContent_open:		toggleButtons	// 열림 버튼
+		,	west__togglerContent_closed:	toggleButtons	// 닫힘 버튼
+		,	west__closable:					true			// 닫히게 가능 여부
+		//  상단판 세팅
+		,	north__paneSelector:			"#north"		// div 아이디 or 클래스
+		,	north__size:					130				// 시작 시 상단판 사이즈
+		,	north__minSize:					130				// 최소 사이즈
+		,	north__maxSize:					130				// 최대 사이즈
+		,	north__togglerLength_open:		80				// 토글 버튼 사이즈 (열림)
+		,	north__togglerLength_closed:	80				// 토글 버튼 사이즈 (닫힘)
+		//  우측판 세팅
+		,	east__paneSelector:				"#east"			// div 아이디 or 클래스
+		,	east__closable:					true			// 닫히게 가능 여부
+		,	east__size:						0				// 기본 사이즈
+		,	east__togglerLength_closed:		70				// 토글 버튼 사이즈 (닫힘)
+		//  중앙판 세팅
+		,	center__paneSelector:			"#center"		// div 아이디 or 클래스
+		// 기타
+		,	spacing_open:					8				// 열림 라인 두께
+		,	spacing_closed:					8				// 닫힘 라인 두께
+		,	resizeWhileDragging: 			true			// 리사이즈 가능 여부
 		});
+		
+		// 오버플로우 적용 
+		myLayout.allowOverflow("center");
+		
+		// east는 기본으로 숨김
+		myLayout.hide("east");
 
-		// SET OBJECT POINTERS FOR CONVENIENCE
-		var
-			$westToggler  = myLayout.togglers.west
-		//,	$southToggler = myLayout.togglers.south
-		;
-
-		// UN-BIND DEFAULT TOGGLER FUNCTIONALITY
+		// 토글 버튼 객체
+		var $westToggler = myLayout.togglers.west;
+		var $eastToggler = myLayout.togglers.east; 
+		
+		// 왼쪽 버튼 바인드 제거
 		$westToggler.unbind("click");
-		//$southToggler.unbind("click");
-
-		// BIND CUSTOM WEST METHODS
-		$westToggler.find(".btnToggler")	.click( toggleWest );
-		$westToggler.find(".btnExpand")		.click( expandWest );
-		//$westToggler.find(".btnReset")		.click( resetWest );
-
-		// BIND CUSTOM SOUTH METHODS
-		//$southToggler.find(".btnToggler")	.click( toggleSouth );
-		//$southToggler.find(".btnExpand")	.click( expandSouth );
-		//$southToggler.find(".btnReset")		.click( resetSouth );
-
-		// ADD TOOLTIPS TO CUSTOM BUTTONS
+		$eastToggler.unbind("click");
+		// 왼쪽 버튼 각각의 버튼에 이벤트 추가
+		$westToggler.find(".btnToggler").click( toggleWest );
+		$westToggler.find(".btnExpand").click( expandWest );
+		// 왼쪽 버튼 타이틀 추가
 		$(".btnExpand").attr("title", "Expand to full size");
-		$(".btnReset") .attr("title", "Reset size to default");
-
+		// 오른쪽 버튼 클릭 이벤트 변경
+		$eastToggler.click( toggleEast );
 	});
 
-	// CUSTOM WEST METHODS
-	function toggleWest  (evt) { myLayout.toggle("west"); evt.stopPropagation(); };
-	function expandWest  (evt) { sizePane("west", '100%'); };
-	function resetWest   (evt) { sizePane("west", westDefaultSize); };
-
-	// CUSTOM SOUTH METHODS
-	//function toggleSouth (evt) { myLayout.toggle("south"); evt.stopPropagation(); };
-	//function expandSouth (evt) { sizePane("south", 9999); }; // ie, make as big as possible
-	//function resetSouth  (evt) { sizePane("south", southDefaultSize); };
-
-	// GENERIC HELPER FUNCTION
-	function sizePane (pane, size) {
-		myLayout.sizePane(pane, size);
-		myLayout.open(pane); // open pane if not already
-	};
-
+	// 좌측 토글 버튼 (위)
+	function toggleWest(evt) {
+		myLayout.toggle("west");
+		evt.stopPropagation();
+	}
+	// 좌측 열림 버튼 (아래)
+	function expandWest(evt) {
+		myLayout.hide("west");
+		myLayout.show("east");
+		myLayout.close("east");
+		evt.stopPropagation();
+	}
+	// 우측 토글 버튼
+	function toggleEast(evt) {
+		myLayout.hide("east");
+		myLayout.show("west");
+		evt.stopPropagation();
+	}
+	
     </script> 
 
 </head>
 <body>
-	<div class="ui-layout-center">Center</div> 
-	<!-- <div class="ui-layout-north">North</div> 
-	<div class="ui-layout-south">South</div> 
-	<div class="ui-layout-east">East</div>  -->
-	<div class="ui-layout-west">West</div> 
+	<div>
+		<div id="west">West
+		</div>
+		<div id="center">Center
+		</div>
+		<div id="north">North
+		</div>
+		<div id="east">
+		</div>
+	</div>
 </body>
 </html>
